# devioc

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/: index.rst.txt
_static/: documentation_options.js  styles.css
_static/css/: styles.css
devioc/: log.py  models.py  version.py
devioc/tests/: test_ioc.py
docs/: .gitignore  Makefile
docs/source/: conf.py  index.rst
docs/source/static/: styles.css
docs/source/static/css/: styles.css
docs/src/: conf.py  index.rst
test/: test_ioc.py
test/testioc/testioc/: ioc.py
tests/: test_ioc.py
